subo api response para swagger